Bug 399267 - hovering cursor over file displays file info in status bar for only 1 second
Summary: hovering cursor over file displays file info in status bar for only 1 second
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: bars: status (other bugs)
Version First Reported In: 18.08.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-01 07:12 UTC by tguen
Modified: 2019-11-09 21:00 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tguen 2018-10-01 07:12:32 UTC
When I hover my mouse cursor over a file in the main panel, it shows info about that file (name, type, size) in the status bar. After about 1 second, the status bar reverts to the default text, showing info about the current directory. Reproducible 95+% of the time.
Comment 1 Kai Uwe Broulik 2018-10-01 07:17:05 UTC
I can reproduce
Comment 2 Nate Graham 2018-12-03 18:01:54 UTC
I'm actually not convinced that the status bar should show the file info at all when the information panel is open; it's redundant. We should definitely fix this bug, but we might want to consider not changing the status bar display at all when the information panel is open.
Comment 3 Patrick Silva 2019-01-23 13:23:03 UTC
bug persists with dolphin 18.12.1 on Arch Linux.
Comment 4 Méven Car 2019-11-08 15:22:56 UTC
I don't agree with you Nate.
The problem is in the current behavior : the status bar changes its text without user interaction. This is not a good user experience and not what users would expect.

Having redundant information with the information panel does not hurt, on the contrary it makes finding those very commonly used information twice as easy to find, and is important for users not using details view or the information panel.

My opinion is that we should not have a timer here, simply, returning to the "normal" status text when the user hovers away from the file as one would expect.
Comment 5 Méven Car 2019-11-09 21:00:41 UTC
Git commit 31bc909c3bd051e02facb7f5dc65882ed9dc483c by Méven Car.
Committed on 09/11/2019 at 21:00.
Pushed by meven into branch 'master'.

[Status Bar] Remove file status Timer, add text update delay

Summary:
Currently when hovering over a file we have its name, mimetype type and size display in the status bar for 1 second, after which the status of the folder is displayed.

This patch removes this timer making the status bar behavior more predictable and user friendly.

Instead there is a 50ms delay between when the status bar gets new text to display (for instance mouse hovering or keyboard navigation) and when the status bar displayed text is updated. This is to avoid flickering.

FIXED-IN: 19.12

Reviewers: #dolphin, elvisangelaccio, ngraham

Reviewed By: #dolphin, elvisangelaccio, ngraham

Subscribers: kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D25218

M  +16   -29   src/statusbar/dolphinstatusbar.cpp
M  +2    -11   src/statusbar/dolphinstatusbar.h

https://commits.kde.org/dolphin/31bc909c3bd051e02facb7f5dc65882ed9dc483c